修改语言配置

--- a/src/main/webapp/WEB-INF/i18n_en.properties
+++ b/src/main/webapp/WEB-INF/i18n_en.properties
@@ -1,4 +1,4 @@
-#CRUD
+# CRUD
 create=Create
 update=Update
 delete=Delete
@@ -9,7 +9,7 @@ request.error=Request Error. Try again in a few minutes.
 sample.email=contact@email.com
 sample.phone=1234-5678
 
-#messages
+# messages
 message.create.success=Created With Success
 message.update.success=Updated With Success
 message.delete.success=Deleted With Success
@@ -19,33 +19,33 @@ search.for=Search For
 delete.confirm=Are you sure that you want to delete
 
 # project
-project.name=uaiContacts
-project.title=uaiContacts
+project.name=full-web-example
+project.title=Full-Web-Example
 
 # login
 login.header=Please Sign In
 login.signIn=Sign in
 
-#header
-header.message=Welcome to uaiContacts
+# header
+header.message=Welcome to full-web-example
 header.home=Home
 header.contacts=Contacts
 header.logout=Logout
 
-#pagination
+# pagination
 pagination.first=First
 pagination.of=of
 pagination.last=Last
 
-#errors
+# errors
 error.generic.header=Something happened
 error.generic.text=We have an unexpected result, could you report it to the administrator please?
 login.error=Incorrect Username or Password\!
 
-#welcome page
+# welcome page
 welcomePage.description=With uaiContacts you will be able to manage all your company employees contacts. In the first version you will be able to check name, email and phone.
 
-#contacts
+# contacts
 contact=Contact
 contacts.header=Contacts
 contacts.name=Name
