--- a/src/main/webapp/WEB-INF/i18n_en.properties
+++ b/src/main/webapp/WEB-INF/i18n_en.properties
@@ -43,7 +43,7 @@ error.generic.text=We have an unexpected result, could you report it to the admi
 login.error=Incorrect Username or Password\!
 
 # welcome page
-welcomePage.description=With uaiContacts you will be able to manage all your company employees contacts. In the first version you will be able to check name, email and phone.
+welcomePage.description=With full-web-example you will be able to manage all your company employees contacts. In the first version you will be able to check name, email and phone.
 
 # contacts
 contact=Contact
